--- a/src/app/styles/ui.css
+++ b/src/app/styles/ui.css
@@ -1,37 +1,40 @@
 body {
-    font: 12px sans-serif;
-    text-align: center;
-    margin: 20px;
+    background-color: var(--figma-color-bg);
+    color: var(--figma-color-text);
+    /* font: "Inter" sans-serif; */
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-between; */
 }
-button {
-    border-radius: 5px;
-    background: white;
-    color: black;
-    border: none;
-    padding: 8px 15px;
-    margin: 0 5px;
-    box-shadow: inset 0 0 0 1px black;
-    outline: none;
+
+.form {
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    gap: 16px;
 }
-#create {
-    box-shadow: none;
-    background: #18a0fb;
-    color: white;
+
+.primary-btn {
+    background-color: var(--figma-color-bg-brand);
 }
-input {
-    border: none;
-    outline: none;
-    padding: 8px;
+
+.switch__label {
+    background-color: var(--figma-color-bg);
+    color: var(--figma-color-text);
 }
-input:hover {
-    box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
+
+.switch__label:before {
+    background-color: var(--figma-color-bg-secondary);
+    /* border: 1px solid var(--figma-color-border); */
 }
-button:focus {
-    box-shadow: inset 0 0 0 2px #18a0fb;
+
+.switch__toggle:checked + .switch__label:before {
+    background-color: var(--figma-color-bg-brand);
 }
-#create:focus {
-    box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.3);
-}
-input:focus {
-    box-shadow: inset 0 0 0 2px #18a0fb;
+
+.switch__label:after {
+    /* background-color: var(--figma-color-bg-brand); */
+    /* border: 1px solid var(--figma-color-border-onbrand); */
 }
